新增接口不通返回信息；新增el-form-item>.item-tips

--- a/template/src/assets/style/base/form.scss
+++ b/template/src/assets/style/base/form.scss
@@ -17,6 +17,12 @@
 				animation:headShake 1s ease-in-out;
 			}
 		}
+		.content-tips {
+			font-size: 12px;
+			color: $--color-text-placeholder;
+			line-height: 16px;
+			margin-top: 5px;
+		}
 	}
 	.el-date-editor--daterange.el-input, .el-date-editor--daterange.el-input__inner, .el-date-editor--timerange.el-input, .el-date-editor--timerange.el-input__inner {
 		width: 100%;
