优化.el-scroll在flex情况下，宽度无法撑满的清空

--- a/template/src/assets/style/base/scrollbar.scss
+++ b/template/src/assets/style/base/scrollbar.scss
@@ -1,6 +1,7 @@
 /* el-scrollbar隐藏组件横向滚动条 */
 .el-scrollbar {
 	height: 100%;
+	width: 100%;
 	& > .el-scrollbar__wrap {
 		overflow-x: hidden;
 		.el-scrollbar__view {
