--- a/template/src/components/common/Toast/src/toast.scss
+++ b/template/src/components/common/Toast/src/toast.scss
@@ -56,9 +56,9 @@
     background-image: url(./assets/icon-error.png);
   }
 }
-.ty-toast-wran {
+.ty-toast-warning {
   &:before {
-    background-image: url(./assets/icon-wran.png);
+    background-image: url(./assets/icon-warning.png);
   }
 }
 .ty-toast-wait {
