设置默认appid，优化page-index等~~

--- a/template/src/assets/style/common.scss
+++ b/template/src/assets/style/common.scss
@@ -82,6 +82,13 @@
 	}
 } 
 
+@each $var in visible, hidden,scroll,auto,inherit {
+	.overflow-#{$var} {
+		overflow: #{$var};
+	}
+} 
+
+
 @each $var in top, middle,bottom {
 	.vertical-#{$var} {
 		vertical-align: #{$var};
