--- a/template/src/assets/style/base/form.scss
+++ b/template/src/assets/style/base/form.scss
@@ -34,6 +34,9 @@
 	.el-date-editor--daterange.el-input, .el-date-editor--daterange.el-input__inner, .el-date-editor--timerange.el-input, .el-date-editor--timerange.el-input__inner {
 		width: 100%;
 	}
+	.el-date-editor .el-range-separator {
+		width: 30px;
+	}
 	.input-search {
 		&.el-form-item--small {
 			.el-input {
