--- a/template/src/assets/style/reset.scss
+++ b/template/src/assets/style/reset.scss
@@ -17,7 +17,7 @@ time, mark, audio, video, input {
     border: 0;
     font-size: 100%;
     font-weight: normal;
-    vertical-align: baseline;
+    // vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -86,6 +86,7 @@ li {
 img {
 	border-style: none;
 	display: inline-block;
+	vertical-align:middle;
 }
 
 b,
@@ -96,17 +97,4 @@ strong {
 textarea {
 	font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif;
 	-webkit-text-size-adjust: none;
-}
-
-::-webkit-scrollbar {
-	width: 6px;
-}
-::-webkit-scrollbar-track{
-	// -webkit-box-shadow: inset 0 0 6px rgba(144,147,153,.3);
-	background-color: rgba(144,147,153,0);
-	border-radius: 2px;
-}
-::-webkit-scrollbar-thumb {
-	border-radius: 2px;
-	background-color: rgba(144,147,153,.3);
 }
