滚动条优化和el下拉框最后一条数据显示不全问题

--- a/template/src/assets/style/base/scrollbar.scss
+++ b/template/src/assets/style/base/scrollbar.scss
@@ -2,10 +2,15 @@
 .el-scrollbar {
 	height: 100%;
 	width: 100%;
-	& > .el-scrollbar__wrap {
-		overflow-x: hidden;
-		.el-scrollbar__view {
-			// height: 100%;
+	&.page-component__scroll {
+		& > .el-scrollbar__wrap {
+			overflow-x: hidden;
+			.el-scrollbar__view {
+				// height: 100%;
+			}
 		}
+	}
+	.el-scrollbar__wrap[class*='el-select'] {
+		overflow-x: scroll;
 	}
 }
