移动端样式新增

--- a/template/src/assets/style/vant.less
+++ b/template/src/assets/style/vant.less
@@ -3,9 +3,17 @@
 @orange: #F7B740;
 @green: #00A04F;
 
+@gray:#9B9B9B;
+
+@blue-light:#eaf4fe;
+@green-light:#dff3d2;
+
 @dialog-border-radius:4px;
 @dialog-message-font-size: 18px;
 @dialog-confirm-button-text-color:@blue;
 @dialog-message-line-height:24px;
 
 @border-radius-sm: 4px;
+
+@tabs-default-color:@blue;
+@tab-active-text-color:@blue;
