--- a/template/src/assets/style/base/dialog.scss
+++ b/template/src/assets/style/base/dialog.scss
@@ -1,7 +1,7 @@
 .el-dialog {
 	&.is-border {
 		.el-dialog__header {
-			border-bottom: 1px solid $--bg-color-app;
+			border-bottom: 1px solid $--background-color-info;
 ;
 		}
 	}
