--- a/template/src/assets/style/base/button.scss
+++ b/template/src/assets/style/base/button.scss
@@ -10,10 +10,16 @@
 				warning:$--color-warning
 				) {
 				&.el-button--#{$name} {
-					&:hover,&:focus {
-						color: #FFFFFF;
+					border-color: #{$color};
+					&:focus {
+						color: #{$color};
 						border-color: #{$color};
-						background-color: #{$color};
+						background-color: #FFFFFF;
+					}
+					&:hover {
+						color: #{$color};
+						border-color: #{$color};
+						background-color: rgba($color,0.1);
 					}
 				}
 			}
