--- a/template/src/assets/style/base/drawer.scss
+++ b/template/src/assets/style/base/drawer.scss
@@ -17,7 +17,7 @@
 		flex-direction: column;
 		.drawer-body {
 			padding: 20px;
-			flex: 1;
+			flex: 1 0 0;
 		}
 		.drawer-footer {
 			border-top: 1px solid $--border-color-base;
