--- a/template/src/assets/style/base/drawer.scss
+++ b/template/src/assets/style/base/drawer.scss
@@ -20,6 +20,7 @@
 			flex: 1 0 0;
 		}
 		.drawer-footer {
+			flex-shrink:0;
 			border-top: 1px solid $--border-color-base;
 			padding: 20px;
 		}
