--- a/template/src/assets/style/variable.scss
+++ b/template/src/assets/style/variable.scss
@@ -5,7 +5,7 @@ $--color-danger:#DB0000;
 $--color-warning:#F7B740;
 
 $--background-color-primary:#E8F6FF;
-$--background-color-success:#D6F8E7;
+$--background-color-success:#EFFFEA;
 $--background-color-info:#F4F4F4;
 $--background-color-danger:#FFE6E6;
 $--background-color-warning:#FFEFD0;
@@ -15,9 +15,9 @@ $--color-text-regular:#555555;
 $--color-text-secondary:#999;
 $--color-text-placeholder:#B2B2B2;
 
-$--border-color-base:#D7D7D7;
+$--border-color-base:#EAEAEA;
 
-$--card-border-color:#D7D7D7;
+$--card-border-color:#EAEAEA;
 
 $--color-primary-light:#E8F3FF;
 $--color-danger-light:#fbe6e6;
