--- a/template/src/assets/style/reset.scss
+++ b/template/src/assets/style/reset.scss
@@ -48,6 +48,7 @@ html,body {
 	-webkit-text-size-adjust: none;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	font-size: 14px;
+	user-select:none;
 }
 
 html {
