--- a/template/src/assets/style/base.scss
+++ b/template/src/assets/style/base.scss
@@ -20,4 +20,5 @@
 @import 'base/picker.scss';
 
 @import 'page/layout-simple.scss';
+@import 'page/layout-narrow.scss';
 @import 'page/layout-PC_at_APP.scss';
