新增el-alert的样式拓展

--- a/template/src/assets/style/base.scss
+++ b/template/src/assets/style/base.scss
@@ -18,6 +18,7 @@
 @import 'base/radio.scss';
 @import 'base/tree.scss';
 @import 'base/picker.scss';
+@import 'base/alert.scss';
 
 @import 'page/layout-simple.scss';
 @import 'page/layout-narrow.scss';
