--- a/template/src/assets/style/base/alert.scss
+++ b/template/src/assets/style/base/alert.scss
@@ -23,8 +23,22 @@
 		padding: 20px 15px;
 		.el-alert__content {
 			.el-alert__description {
-				margin-top: 10px;
 				font-size: 14px;
+			}
+		}
+	}
+	.el-alert__description {
+		margin: 0;
+	}
+	.el-alert__title {
+		& + .el-alert__description {
+			margin-top: 5px;
+		}
+	}
+	&.el-alert-medium { 
+		.el-alert__title {
+			& + .el-alert__description {
+				margin-top: 10px;
 			}
 		}
 	}
